# deltaglider_commander

./: .dockerignore  .gitignore  AGENTS.md  AUTHENTICATION.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  DOCKERHUB.md  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  backend.txt  coverage.xml  docker-compose.prod.yml  docker-compose.yml  env.example  frontend.txt  pyproject.toml  session.yml  tests.txt
.github/workflows/: ci.yml
docs/: MULTI_WORKER_SESSIONS.md
frontend/: .env.local  .eslintrc.cjs  .gitignore  THEME_MIGRATION.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/docs/: ESCAPE_STACK_GUIDE.md  KEYBOARD_IMPROVEMENTS_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  REMAINING_WORK_GUIDE.md  TUI_KEYBOARD_NAVIGATION_SPEC.md  TUI_REFACTORING_IMPLEMENTATION_PLAN.md  TUI_TESTING_SUMMARY.md
frontend/src/: main.tsx
frontend/src/app/: ErrorBoundary.tsx  providers.tsx  routes.tsx  theme.ts  toast.tsx
frontend/src/app/layout/: AppLayout.tsx  Header.tsx  LayoutContext.tsx  ProfileDropdown.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/features/auth/: AuthGuard.tsx  CredentialConfigForm.tsx  useConnectionSummary.ts  useCredentialProfiles.ts  useCredentials.ts  useProfileSwitch.ts  useSessionStatus.ts
frontend/src/features/buckets/: BucketsPanel.tsx  bucketRowStyles.ts  types.ts  useBucketManagement.ts  useBucketStats.ts  useBuckets.ts  useRefreshBucketStats.ts
frontend/src/features/connection/: ConnectionChip.tsx  ConnectionPanel.tsx  ConnectionSheet.tsx  ProfileEditModal.tsx  ProfileSwitcher.tsx  connectionStateStyles.ts
frontend/src/features/file/: FilePanel.tsx  useDeleteObject.ts  useFile.ts
frontend/src/features/objects/: DirectoryCountsCell.tsx  ObjectsSelectionBar.tsx  ObjectsTable.tsx  ObjectsView.tsx  (+9 more)
frontend/src/hooks/: useAuthQuery.ts
frontend/src/pages/: BucketObjectsPage.tsx  BucketsPage.tsx  EnvironmentsPage.tsx  ObjectDetailsPage.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/services/: credentialProfiles.ts  credentialStorage.ts  credentials.ts  sessionManager.ts
frontend/src/stores/: authStore.ts  connectionStore.ts  settingsStore.ts
frontend/src/styles/: index.css
frontend/src/types/: connection.ts
scripts/: ci.sh  generate_types.py
scripts/dev/: README.md  apply-multi-tier-policy.sh  bucket-policy-multi-tier.json  bucket-policy-simple-multi-tier.json  get-hetzner-bucket-info.sh  new-bucket-policy.json  test-hetzner-s3.sh  test-readonly-credentials.sh  update-bucket-policy.sh
src/dgcommander/: app.py  deps.py
src/dgcommander/api/: __init__.py  auth.py  buckets.py  connection.py  dependencies.py  downloads.py  objects.py  objects_clean.py  uploads.py
src/dgcommander/auth/: __init__.py  credentials.py  filesystem_session_store.py  middleware.py  session_base.py  session_store.py
src/dgcommander/common/: base_models.py  decorators.py  mixins.py
src/dgcommander/contracts/: __init__.py  base.py  buckets.py  downloads.py  objects.py  presigned.py  uploads.py
src/dgcommander/domain/: repositories.py
src/dgcommander/jobs/: indexer.py  purge.py  purge_scheduler.py
src/dgcommander/middleware/: rate_limit.py
src/dgcommander/scripts/: __init__.py  seed_minio.py
src/dgcommander/sdk/: __init__.py  models.py  protocol.py
src/dgcommander/services/: cache_strategy.py  catalog.py  deltaglider.py  downloads.py  list_cache.py  presigned.py
src/dgcommander/shared/: object_sort_order.py
src/dgcommander/static/: index.html
src/dgcommander/util/: cache.py  errors.py  json.py  paging.py  s3_context.py  types.py
tests/: conftest.py  test_auth_api.py  test_buckets_api.py  test_catalog.py  test_deltaglider_sdk.py  test_downloads_api.py  test_filesystem_session_store.py  test_list_cache.py  test_memory_adapter.py  test_objects_api.py  test_s3_context.py  test_session_base.py  test_uploads_api.py
tests/sdk/: test_delta_metadata.py  test_s3_cache.py
(+122 files in other folders)
